<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.explosivemine</groupId>
    <artifactId>Anvil</artifactId>
    <version>1.0-SNAPSHOT</version>

    <modules>
        <module>abstraction</module>
        <module>api</module>
        <module>1_8_R1</module>
        <module>1_8_R2</module>
        <module>1_8_R3</module>
        <module>1_9_R1</module>
        <module>1_9_R2</module>
        <module>1_10_R1</module>
        <module>1_11_R1</module>
        <module>1_12_R1</module>
        <module>1_13_R1</module>
        <module>1_13_R2</module>
        <module>1_14_R1</module>
        <module>1_14_4_R1</module>
        <module>1_15_R1</module>
        <module>1_16_R1</module>
        <module>1_16_R2</module>
        <module>1_16_R3</module>
        <module>1_17_R1</module>
        <module>core</module>
    </modules>
    <packaging>pom</packaging>

    <name>Anvil</name>

    <description>Opens the anvil gui anywhere!</description>
    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <url>https://www.spigotmc.org/resources/anvilgui.77142/</url>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>nms-repo</id>
            <url>https://repo.codemc.org/repository/nms/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>RELEASE</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>RELEASE</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>
